--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <div class="container">
-          <h1>Hello World</h1>
-          <a
-            href="https://drive.google.com/file/d/135rtrMRmJW8ytvgSlbVOjO2DKgvcSXSK/view?usp=sharing"
-            >fail</a
-          >
-          <h2>pppp</h2>
-        </div>
+        <div class="container"></div>
       </header>
       <main class="main">
         <div class="container"></div>
       </main>
+      <div class="sub-main">
+        <div class="sub-main-img">
+          <img src="../img/open.jpg" alt="" />
+        </div>
+        </div>
+        
       <footer class="footer">
         <div class="container"></div>
       </footer>
