--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       </main>
       <div class="sub-main">
         <div class="sub-main-img">
-          <img src="../img/open.jpg" alt="" />
+          <img src="open.jpg" alt="" />
         </div>
-        </div>
-        
+      </div>
+
       <footer class="footer">
         <div class="container"></div>
       </footer>
