--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <div class="container"></div>
+        <div class="header-nav">
+          <img src="logo1.jpg" alt="" />
+        </div>
+        <div class="header-nav-centre">
+          <img src="logo3.jpg" alt="" />
+        </div>
+        <div class="header-nav">
+          <img src="logo1.jpg" alt="" />
+        </div>
       </header>
       <main class="main">
         <div class="container"></div>
@@ -45,7 +53,13 @@
           <img src="open.jpg" alt="" />
         </div>
       </div>
-
+      <div class="tarify">
+        <div class="tarif-item">
+          <h1>User-50 manat</h1>
+          <button class="button">купить</button>
+          <hr />
+        </div>
+      </div>
       <footer class="footer">
         <div class="container"></div>
       </footer>
