--- a/index.html
+++ b/index.html
@@ -48,14 +48,15 @@
       <main class="main">
         <div class="container"></div>
       </main>
-      <div class="sub-main">
+      <!-- <div class="sub-main">
         <div class="sub-main-img">
           <img src="open.jpg" alt="" />
         </div>
-      </div>
+      </div> -->
+      <h1>Тарифы</h1>
       <div class="tarify">
         <div class="tarif-item">
-          <h1>User-50 manat</h1>
+          <h2>User-50 manat</h2>
           <button class="button">купить</button>
           <hr />
         </div>
