--- a/index.html
+++ b/index.html
@@ -56,9 +56,20 @@
       <h1>Тарифы</h1>
       <div class="tarify">
         <div class="tarif-item">
-          <h2>User-50 manat</h2>
+          <h2>User - 50 manat</h2>
           <button class="button">купить</button>
-          <hr />
+        </div>
+      </div>
+      <div class="tarify">
+        <div class="tarif-item">
+          <h2>LUXE - 50 manat</h2>
+          <button class="button">купить</button>
+        </div>
+      </div>
+      <div class="tarify">
+        <div class="tarif-item">
+          <h2>Bizness - 50 manat</h2>
+          <button class="button">купить</button>
         </div>
       </div>
       <footer class="footer">
