--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
         <div class="tarif-item">
           <h2>User - 50 manat</h2>
           <button class="button">купить</button>
+          
         </div>
       </div>
+      <hr size="5px" width="50px">
       <div class="tarify">
         <div class="tarif-item">
           <h2>LUXE - 75 manat</h2>
@@ -71,6 +73,16 @@
           <h2>Bizness - 150 manat</h2>
           <button class="button">купить</button>
         </div>
+      </div>
+      <div class="info-block">
+        <div class="info-tarify block">
+          <h2>Информация о Тарифах</h2>
+          
+        </div>
+        <div class="info-using block">
+          Как Пользоваться
+        </div>
+        <div class="info-support block">Служба Поддержки</div>
       </div>
       <footer class="footer">
         <div class="container"></div>
