--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/style360.css" />
     <!-- favicons -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="img/favicons/apple-touch-icon.png"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/fav.png" />
     <link
       rel="icon"
       type="image/png"
@@ -58,10 +54,9 @@
         <div class="tarif-item">
           <h2>User - 50 manat</h2>
           <button class="button">купить</button>
-          
         </div>
       </div>
-      <hr size="5px" width="50px">
+      <hr size="5px" width="50px" />
       <div class="tarify">
         <div class="tarif-item">
           <h2>LUXE - 75 manat</h2>
@@ -77,11 +72,8 @@
       <div class="info-block">
         <div class="info-tarify block">
           <h2>Информация о Тарифах</h2>
-          
         </div>
-        <div class="info-using block">
-          Как Пользоваться
-        </div>
+        <div class="info-using block">Как Пользоваться</div>
         <div class="info-support block">Служба Поддержки</div>
       </div>
       <footer class="footer">
