--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <!-- favicons -->
-    <title></title>
+    <title>Open Vpn</title>
   </head>
   <body>
     <div class="wrapper">
@@ -44,29 +44,25 @@
       <main class="main">
         <div class="container"></div>
       </main>
-      <!-- <div class="sub-main">
-        <div class="sub-main-img">
-          <img src="open.jpg" alt="" />
-        </div>
-      </div> -->
+
       <h1>Тарифы</h1>
       <div class="tarify">
         <div class="tarif-item">
           <h2>User - 50 manat</h2>
-          <button class="button">купить</button>
+          <button class="button">Заказать</button>
         </div>
       </div>
       <hr size="5px" width="50px" />
       <div class="tarify">
         <div class="tarif-item">
           <h2>LUXE - 75 manat</h2>
-          <button class="button">купить</button>
+          <button class="button">Заказать</button>
         </div>
       </div>
       <div class="tarify">
         <div class="tarif-item">
           <h2>Bizness - 150 manat</h2>
-          <button class="button">купить</button>
+          <button class="button">Заказать</button>
         </div>
       </div>
       <div class="info-block">
@@ -77,7 +73,10 @@
         <div class="info-support block">Служба Поддержки</div>
       </div>
       <footer class="footer">
-        <div class="container"></div>
+        <div class="container">
+          <p>Open Vpn - 2022</p>
+          <p>Copyright</p>
+        </div>
       </footer>
     </div>
 
