--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <title>Open Vpn</title>
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper main__display">
       <header class="header">
         <div class="header-nav">
           <img src="logo1.jpg" alt="" />
@@ -49,20 +49,20 @@
       <div class="tarify">
         <div class="tarif-item">
           <h2>User - 50 manat</h2>
-          <button class="button">Заказать</button>
+          <a class="button" href="user.html">Заказать</a>
         </div>
       </div>
       <hr size="5px" width="50px" />
       <div class="tarify">
         <div class="tarif-item">
           <h2>LUXE - 75 manat</h2>
-          <button class="button">Заказать</button>
+          <a class="button" href="luxe.html">Заказать</a>
         </div>
       </div>
       <div class="tarify">
         <div class="tarif-item">
           <h2>Bizness - 150 manat</h2>
-          <button class="button">Заказать</button>
+          <a class="button" href="bizness.html">Заказать</a>
         </div>
       </div>
       <div class="info-block">
