--- a/user.html
+++ b/user.html
@@ -10,8 +10,12 @@
     <title>Tarif User</title>
 </head>
 <body>
+    <div class="logo">
+        <img src="logo2.jpg" alt="">
+    </div>
+    <h1>Тарифный План User</h1>
     <div class="user-info">
-        <h1>Тарифный План User</h1>
+        
         <p>Срок действия - 1 месяц</p>
         <p>Сервер в Германии</p>
         <p>Скорость работы - хорошая</p>
