--- a/bizness.html
+++ b/bizness.html
@@ -10,7 +10,7 @@
     <title>Tarif Bizness</title>
   </head>
   <body>
-    <div class="bizness-info">
+    <div class="bizness-info infa">
       <h1>Тарифный План Bizness</h1>
       <p>Срок действия - 1 месяц</p>
       <p>Сервер в Германии</p>
@@ -24,7 +24,7 @@
     <div class="user-sale">
       <input type="text" placeholder="Введите Номер Телефона" />
       <input type="text" placeholder="Пароль" />
-      <button class="user__button">Купить</button>
+      <button class="user__button button__sale">Купить</button>
     </div>
   </body>
 </html>
