--- a/user.html
+++ b/user.html
@@ -14,8 +14,7 @@
         <img src="logo2.jpg" alt="">
     </div>
     <h1>Тарифный План User</h1>
-    <div class="user-info">
-        
+    <div class="user-info infa">
         <p>Срок действия - 1 месяц</p>
         <p>Сервер в Германии</p>
         <p>Скорость работы - хорошая</p>
@@ -28,7 +27,7 @@
     <div class="user-sale">
         <input type="text" placeholder="Введите Номер Телефона">
         <input type="text" placeholder="Пароль" >
-        <button class="user__button">
+        <button class="user__button button__sale">
             Купить
         </button>
     </div>
