--- a/user.html
+++ b/user.html
@@ -23,11 +23,12 @@
     </div>
     <div class="user-sale">
         <input type="text" placeholder="Введите Номер Телефона">
-        <input type="text" placeholder="Пароль" >
+        <input type="text" placeholder="Пароль" class="input__user" >
         <button class="user__button button__sale">
             Купить
         </button>
     </div>
-    
+    <a class="bizness__1" href="https://drive.google.com/file/d/1Yqm4YVpOQJFjAX35DA36NUV5FhdiaCDe/view?usp=sharing"></a>
+    <script src="./js/user.js"></script>
 </body>
 </html>
