--- a/user.html
+++ b/user.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/style360.css" />
     <title>Tarif User</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="logo">
-        <img src="logo2.jpg" alt="">
+      <img src="logo2.jpg" alt="" />
     </div>
     <h1>Тарифный План User</h1>
     <div class="user-info infa">
-        <p>Срок действия - 1 месяц</p>
-        <p>Сервер в Германии</p>
-        <p>Скорость работы - хорошая</p>
-        <p>Устойчивость работы - хорошая</p>
-        <p>Безопасное соединение</p>
+      <p>Срок действия - 1 месяц</p>
+      <p>Сервер в Германии</p>
+      <p>Скорость работы - хорошая</p>
+      <p>Устойчивость работы - хорошая</p>
+      <p>Безопасное соединение</p>
     </div>
     <div class="user-sale">
-        <input type="text" placeholder="Введите Номер Телефона">
-        <input type="text" placeholder="Пароль" class="input__user" >
-        <button class="user__button button__sale">
-            Купить
-        </button>
+      <input type="text" placeholder="Введите Номер Телефона" />
+      <input type="text" placeholder="Пароль" class="input__user" />
+      <button class="user__button button__sale">Купить</button>
     </div>
-    <a class="bizness__1" href="https://drive.google.com/file/d/1Yqm4YVpOQJFjAX35DA36NUV5FhdiaCDe/view?usp=sharing"></a>
+    <a
+      class="bizness__1"
+      href="https://drive.google.com/file/d/1Yqm4YVpOQJFjAX35DA36NUV5FhdiaCDe/view?usp=sharing"
+      >Ya ssylka</a
+    >
     <script src="./js/user.js"></script>
-</body>
+  </body>
 </html>
