--- a/user.html
+++ b/user.html
@@ -27,9 +27,9 @@
       <button class="user__button button__sale">Купить</button>
     </div>
     <a
-      class="bizness__1"
-      href="https://drive.google.com/file/d/1Yqm4YVpOQJFjAX35DA36NUV5FhdiaCDe/view?usp=sharing"
-      >Ya ssylka</a
+      class="use__4"
+      href="https://drive.google.com/file/d/1epP9t8xESVkmcqI3D2F5skqRge9yO8bp/view?usp=sharing"
+      >Скачать</a
     >
     <script src="./js/user.js"></script>
   </body>
