--- a/user.html
+++ b/user.html
@@ -10,9 +10,6 @@
     <title>Tarif User</title>
   </head>
   <body>
-    <div class="logo">
-      <img src="logo2.jpg" alt="" />
-    </div>
     <h1>Тарифный План User</h1>
     <div class="user-info infa">
       <p>Срок действия - 1 месяц</p>
@@ -29,6 +26,11 @@
     <a
       class="use__4"
       href="https://drive.google.com/file/d/1epP9t8xESVkmcqI3D2F5skqRge9yO8bp/view?usp=sharing"
+      >Скачать</a
+    >
+    <a
+      class="use__5"
+      href="https://drive.google.com/file/d/1HdAe6JrA7OduAg9NRvWKeG-PVjIk-H5D/view?usp=sharing"
       >Скачать</a
     >
     <script src="./js/user.js"></script>
