--- a/bizness.html
+++ b/bizness.html
@@ -14,9 +14,11 @@
       <h1>Тарифный План Bizness</h1>
       <p>Срок действия - 1 месяц</p>
       <p>Сервер в Германии</p>
-      <p>Скорость работы - хорошая</p>
-      <p>Устойчивость работы - хорошая</p>
+      <p>Скорость работы - супер</p>
+      <p>Устойчивость работы - супер</p>
       <p>Безопасное соединение</p>
+      <p>Сверхшифрование</p>
+      <p>Безопасность 100%</p>
     </div>
     <div class="user-sale">
       <input type="text" placeholder="Введите Номер Телефона" />
