--- a/luxe.html
+++ b/luxe.html
@@ -14,8 +14,8 @@
       <h1>Тарифный План LUXE</h1>
       <p>Срок действия - 1 месяц</p>
       <p>Сервер в Германии</p>
-      <p>Скорость работы - хорошая</p>
-      <p>Устойчивость работы - хорошая</p>
+      <p>Скорость работы - высокая</p>
+      <p>Устойчивость работы - высокая</p>
       <p>Безопасное соединение</p>
     </div>
     <div class="user-sale">
