--- a/luxe.html
+++ b/luxe.html
@@ -20,8 +20,21 @@
     </div>
     <div class="user-sale">
       <input type="text" placeholder="Введите Номер Телефона" />
-      <input type="text" placeholder="Пароль" />
-      <button class="user__button button__sale">Купить</button>
+      <input type="text" placeholder="Пароль" class="input__luxe" />
+      <button class="luxe__button button__sale">Купить</button>
     </div>
+    <div class="ssylki">
+      <a
+        class="luxe__2"
+        href="https://drive.google.com/file/d/1TaLqF7XoMKaDMcEmU1EAHMghmQ5RwKAT/view?usp=sharing"
+        >Скачать</a
+      >
+      <a
+        class="luxe__3"
+        href="https://drive.google.com/file/d/17hIpY_7Qj6UnR2B449KDKGvd3zLpDEqW/view?usp=sharing"
+        >Скачать</a
+      >
+    </div>
+    <script src="./js/luxe.js"></script>
   </body>
 </html>
