--- a/user.html
+++ b/user.html
@@ -23,16 +23,18 @@
       <input type="text" placeholder="Пароль" class="input__user" />
       <button class="user__button button__sale">Купить</button>
     </div>
-    <a
-      class="use__4"
-      href="https://drive.google.com/file/d/1epP9t8xESVkmcqI3D2F5skqRge9yO8bp/view?usp=sharing"
-      >Скачать</a
-    >
-    <a
-      class="use__5"
-      href="https://drive.google.com/file/d/1HdAe6JrA7OduAg9NRvWKeG-PVjIk-H5D/view?usp=sharing"
-      >Скачать</a
-    >
+    <div class="ssylki">
+        <a
+        class="use__4"
+        href="https://drive.google.com/file/d/1epP9t8xESVkmcqI3D2F5skqRge9yO8bp/view?usp=sharing"
+        >Скачать</a
+      >
+      <a
+        class="use__5"
+        href="https://drive.google.com/file/d/1HdAe6JrA7OduAg9NRvWKeG-PVjIk-H5D/view?usp=sharing"
+        >Скачать</a
+      >
+    </div>
     <script src="./js/user.js"></script>
   </body>
 </html>
