--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
         </div>
       </header>
       <main class="main">
-        <div class="container"></div>
+        <div class="container">
+          <div class="main__img-block">
+            <img class="main__img" src="ok.jpg" alt="">
+          </div>
+
+        </div>
       </main>
 
       <h1>Тарифы</h1>
