--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
       </header>
       <main class="main">
         <div class="container">
-          <div class="main__img-block">
+          <div class="main__img-block ok">
             <img class="main__img" src="ok.jpg" alt="">
+          </div>
+          <div class="main__img-block tiktok">
+            <img class="main__img" src="tiktok.jpg" alt="">
           </div>
 
         </div>
