--- a/index.html
+++ b/index.html
@@ -44,12 +44,17 @@
       <main class="main">
         <div class="container">
           <div class="main__img-block ok">
-            <img class="main__img" src="ok.jpg" alt="">
+            <img class="main__img" src="ok.jpg" alt="" />
           </div>
           <div class="main__img-block tiktok">
-            <img class="main__img" src="tiktok.jpg" alt="">
+            <img class="main__img" src="tiktok2.png" alt="" />
           </div>
-
+          <div class="main__img-block youtube">
+            <img class="main__img" src="youtube.png" alt="" />
+          </div>
+          <div class="main__img-block telegram">
+            <img class="main__img" src="telegram.jpg" alt="" />
+          </div>
         </div>
       </main>
 
